--- a/FightAcademy/FightAcademy/Controllers/History/HistoryCollectionViewCell.xib
+++ b/FightAcademy/FightAcademy/Controllers/History/HistoryCollectionViewCell.xib
@@ -1,21 +1,106 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HistoryCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HistoryCollectionViewCell" customModule="FightAcademy" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="655" height="205"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="655" height="205"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yvk-8I-QWf">
+                        <rect key="frame" x="0.0" y="0.0" width="655" height="205"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="l5Q-0T-s6D">
+                                <rect key="frame" x="10" y="10" width="635" height="187"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="oLi-dC-bBz">
+                                        <rect key="frame" x="0.0" y="0.0" width="635" height="93.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zgt-UK-FKc">
+                                                <rect key="frame" x="0.0" y="35" width="317.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dys-tf-jFy">
+                                                <rect key="frame" x="317.5" y="37" width="317.5" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="55f-tX-bOJ">
+                                        <rect key="frame" x="0.0" y="93.5" width="635" height="93.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coach" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzp-HE-kZP">
+                                                <rect key="frame" x="0.0" y="35" width="190.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpT-Rn-6pR">
+                                                <rect key="frame" x="190.5" y="36.5" width="254" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCO-J3-z2i">
+                                                <rect key="frame" x="444.5" y="36.5" width="190.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="vpT-Rn-6pR" firstAttribute="width" secondItem="l5Q-0T-s6D" secondAttribute="width" multiplier="0.4" id="BVb-Vu-yfy"/>
+                                    <constraint firstItem="hzp-HE-kZP" firstAttribute="width" secondItem="l5Q-0T-s6D" secondAttribute="width" multiplier="0.3" id="b5w-Uc-MXw"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="l5Q-0T-s6D" firstAttribute="leading" secondItem="Yvk-8I-QWf" secondAttribute="leading" constant="10" id="4f6-c5-LJq"/>
+                            <constraint firstAttribute="bottom" secondItem="l5Q-0T-s6D" secondAttribute="bottom" constant="8" id="99t-xY-wYM"/>
+                            <constraint firstAttribute="trailing" secondItem="l5Q-0T-s6D" secondAttribute="trailing" constant="10" id="S9B-XQ-B8x"/>
+                            <constraint firstItem="l5Q-0T-s6D" firstAttribute="top" secondItem="Yvk-8I-QWf" secondAttribute="top" constant="10" id="pVa-6Q-8c8"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="Yvk-8I-QWf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Lkw-tq-xDV"/>
+                <constraint firstAttribute="trailing" secondItem="Yvk-8I-QWf" secondAttribute="trailing" id="Pbj-IZ-E6p"/>
+                <constraint firstItem="Yvk-8I-QWf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xJH-An-OfR"/>
+                <constraint firstAttribute="bottom" secondItem="Yvk-8I-QWf" secondAttribute="bottom" id="xsN-pq-Hnp"/>
+            </constraints>
+            <size key="customSize" width="655" height="205"/>
+            <connections>
+                <outlet property="activityNameLabel" destination="Zgt-UK-FKc" id="Wad-SX-zeY"/>
+                <outlet property="coachFullNameLabel" destination="vpT-Rn-6pR" id="Qag-UC-Vqk"/>
+                <outlet property="coachLabel" destination="hzp-HE-kZP" id="Ghj-vB-NTc"/>
+                <outlet property="dateValueLabel" destination="dys-tf-jFy" id="gt2-ZP-fPy"/>
+                <outlet property="priceValueLabel" destination="UCO-J3-z2i" id="MaH-dP-8U2"/>
+            </connections>
+            <point key="canvasLocation" x="-329.71014492753625" y="94.084821428571431"/>
         </collectionViewCell>
     </objects>
 </document>
