--- a/FightAcademy/FightAcademy/Controllers/Booking/BookingScreen/BookingActivityViewController.xib
+++ b/FightAcademy/FightAcademy/Controllers/Booking/BookingScreen/BookingActivityViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,29 +25,29 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udf-uc-W6J">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="44" width="428" height="882"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pwL-ei-auH">
-                            <rect key="frame" x="0.0" y="8" width="375" height="832"/>
+                            <rect key="frame" x="0.0" y="8" width="428" height="832"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPI-2i-di2">
-                                    <rect key="frame" x="21" y="6" width="338" height="22"/>
+                                    <rect key="frame" x="21" y="6" width="391" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="85g-fV-foi">
-                                    <rect key="frame" x="16" y="42" width="343" height="78"/>
+                                    <rect key="frame" x="16" y="42" width="396" height="78"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sbI-Wc-JzR">
                                             <rect key="frame" x="20" y="15" width="55" height="48"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dambbell" translatesAutoresizingMaskIntoConstraints="NO" id="wif-48-USp">
-                                                    <rect key="frame" x="15.5" y="12" width="24" height="24"/>
+                                                    <rect key="frame" x="15.666666666666664" y="12" width="24" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="24" id="E90-ql-PSN"/>
                                                         <constraint firstAttribute="width" constant="24" id="Y4i-A8-EV2"/>
@@ -68,20 +68,20 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron_left" translatesAutoresizingMaskIntoConstraints="NO" id="Yfm-0w-TIx">
-                                            <rect key="frame" x="315" y="33" width="8" height="12"/>
+                                            <rect key="frame" x="368" y="33" width="8" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="0Uo-OG-ZyH"/>
                                                 <constraint firstAttribute="width" constant="8" id="eHW-Vb-AjR"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ddg-22-xqw">
-                                            <rect key="frame" x="95" y="29.5" width="212" height="19.5"/>
+                                            <rect key="frame" x="95" y="29.333333333333329" width="265" height="19.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVY-Ff-Jyq">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="396" height="78"/>
                                             <connections>
                                                 <action selector="chooseActivityButtonAction:" destination="-1" eventType="touchUpInside" id="wAq-eV-dgc"/>
                                             </connections>
@@ -109,13 +109,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose coach" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4f-pO-JA9">
-                                    <rect key="frame" x="20" y="146" width="335" height="22"/>
+                                    <rect key="frame" x="20" y="146" width="388" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aai-w3-cyK">
-                                    <rect key="frame" x="16" y="182" width="343" height="78"/>
+                                    <rect key="frame" x="16" y="182" width="396" height="78"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testAvatarImage" translatesAutoresizingMaskIntoConstraints="NO" id="Ce1-qB-BKU">
                                             <rect key="frame" x="16" y="11" width="56" height="56"/>
@@ -130,20 +130,20 @@
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron_left" translatesAutoresizingMaskIntoConstraints="NO" id="vGH-Iy-lfy">
-                                            <rect key="frame" x="315" y="33" width="8" height="12"/>
+                                            <rect key="frame" x="368" y="33" width="8" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="8" id="vti-Px-mbC"/>
                                                 <constraint firstAttribute="height" constant="12" id="zFL-ME-MOf"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atW-NX-dc0">
-                                            <rect key="frame" x="92" y="29.5" width="215" height="19.5"/>
+                                            <rect key="frame" x="92" y="29.333333333333314" width="268" height="19.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6BO-az-oVL">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="396" height="78"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <connections>
                                                 <action selector="chooseCoachButtonAction:" destination="-1" eventType="touchUpInside" id="iwi-3q-Aan"/>
@@ -172,13 +172,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06z-5d-5Ph">
-                                    <rect key="frame" x="20" y="286" width="335" height="22"/>
+                                    <rect key="frame" x="20" y="286" width="388" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Qt-oU-g3I" customClass="FSCalendar">
-                                    <rect key="frame" x="16" y="324" width="343" height="300"/>
+                                    <rect key="frame" x="16" y="324" width="396" height="300"/>
                                     <color key="backgroundColor" red="0.19215686269999999" green="0.18823529410000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="300" id="NvF-FX-d35"/>
@@ -219,13 +219,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gU7-tR-NQ3">
-                                    <rect key="frame" x="20" y="648" width="335" height="22"/>
+                                    <rect key="frame" x="20" y="648" width="388" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <collectionView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="OR7-nr-QBl">
-                                    <rect key="frame" x="16" y="682" width="343" height="50"/>
+                                    <rect key="frame" x="16" y="682" width="396" height="50"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="hyH-Bp-5hL"/>
@@ -238,7 +238,7 @@
                                     </collectionViewFlowLayout>
                                 </collectionView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xds-JM-RsY">
-                                    <rect key="frame" x="16" y="756" width="343" height="52"/>
+                                    <rect key="frame" x="16" y="756" width="396" height="52"/>
                                     <color key="backgroundColor" red="0.95686274510000002" green="0.88235294119999996" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="52" id="E79-on-ffE"/>
@@ -303,7 +303,7 @@
             <viewLayoutGuide key="safeArea" id="bQu-NM-93J"/>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="udf-uc-W6J" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ANY-aR-DOw"/>
+                <constraint firstItem="udf-uc-W6J" firstAttribute="top" secondItem="bQu-NM-93J" secondAttribute="top" id="ANY-aR-DOw"/>
                 <constraint firstItem="udf-uc-W6J" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="Hdd-b8-WQ3"/>
                 <constraint firstItem="pwL-ei-auH" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Hnv-J2-3U1"/>
                 <constraint firstItem="udf-uc-W6J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="sL3-0h-BtD"/>
